--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
     </div>
 
     <div class="nav-right">
+	    <button id="theme-toggle" class="theme-toggle" aria-label="Toggle Theme">
+            <i class="fas fa-moon"></i>
+        </button>
         <div class="menu-icon" onclick="toggleMenu()">☰</div>
         <ul id="menu">
             <li><a href="#tools" class="no-deco">Tools</a></li>
