--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
                     <p>Caputok is an innovative app designed to save you time and enable you to follow thousands of users on TikTok.
 TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorsed by, or associated with TikTok or ByteDance Ltd.</p>
                     <ul class="portfolio-links">
-                        <li><a href="assets/apps/caputok/privacy_policy/">Privacy Policy</a></li>
-                        <li><a href="assets/apps/caputok/terms_of_use/">Terms of Use</a></li>
-                        <li><a href="apps/caputok/FAQ.html">FAQ~Caputok</a></li>
-                        <li><a href="https://youtube.com/shorts/C1l8K9q8dog?feature=share">User Guide</a></li>
+                        <li><a href="assets/apps/caputok/privacy_policy/" class="no-deco">Privacy Policy</a></li>
+                        <li><a href="assets/apps/caputok/terms_of_use/" class="no-deco">Terms of Use</a></li>
+                        <li><a href="apps/caputok/FAQ.html" class="no-deco">FAQ~Caputok</a></li>
+                        <li><a href="https://youtube.com/shorts/C1l8K9q8dog?feature=share" class="no-deco">User Guide</a></li>
 		    </ul>
 			<div
                         <p>To get the app for free, click on the link below, or find it on Oppo App Market on Oppo Phone in India, Indonesia, Malaysia, Russia, Vietnam, Hong Kong (China), Philippines, and in Thailand. To get this app change 'phone region' to one of these and search 'Caputok' in Oppo App Market).</p>
