--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
                 <h2>भिष्म निरौला</h2>
                 <p>नमस्ते । <strong>भक्तपुर जिल्ला भित्र जग्गाको नाप जाँच, पास, लगायत जग्गा सम्बन्धी सम्पूर्ण कामहरूको लागि</strong>, साथै जुनसुकै स्थानमा जग्गा खरिद बिक्री, <strong>घरको नक्सा 2D, 3D, इन्टेरियर, एक्स्टेरियर डिजाइन</strong> लगायतका कामहरू छिटो-छरितो र बिना झन्झट, सहज ढंगबाट गर्नको लागि सम्पर्क गर्नुहोला।</p>
                 <p><strong>Phone: </strong>Whatsapp Instead</p>
-                <p><strong>Email:</strong> <a href="mailto:niraulabhisma@gmail.com">Email Bhisma</a></p>
-                <p><strong>WhatsApp:</strong> <a href="https://wa.me/9841915278" target="_blank">Whatsapp Bhisma</a></p>
+                <p><strong>Email:</strong> <a href="mailto:niraulabhisma@gmail.com" class="no-deco">Email Bhisma</a></p>
+                <p><strong>WhatsApp:</strong> <a href="https://wa.me/9841915278" class="no-deco" target="_blank">Whatsapp Bhisma</a></p>
             </div>
         </div>
 
