--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
                 <a href="asphalt-calculator/" class="box">Asphalt Calculator</a>
 		<a href="concrete-calculator/" class="box">Concrete Calculator</a>
                 <a href="land-area-converter/" class="box">Land Area Converter</a>
-		<a href="steel-bars-calculator/" class="box">Steel and GI Calculator</a>
+		<a href="#" class="box" id="steel-gi-calculator">Steel and GI Calculator</a>
                 <a href="time-series-chart-animation/" class="box">Animated Time-Series Chart</a>
             </div>
         </div>
