--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <iframe id="contentFrame" src="" style="width: 100%; height: 80vh; border: none; display: none;"></iframe>
     </div>
 
-    <main>
+   <main id="main-content">
         <div class="intro">
             <div class="intro-image">
                 <img src="assets/images/welcome-banner.jpeg" alt="Main Photo">
