--- a/steel-bars-calculator/index.html
+++ b/steel-bars-calculator/index.html
@@ -69,12 +69,14 @@
 </head>
 
 <body>
-      <main>
+    <header>
         <div class="head-container">
             <h1>Steel & GI Calculator</h1>
             <p>Accurate weight and dimension calculations for steel and GI materials</p>
         </div>
-  
+    </header>
+      <main>
+        
         <section class="container">
             <nav class="button-group" aria-label="Material Type Selection">
                 <button class="tab-btn active" data-type="plain" aria-label="Plain Bar Calculator">Plain Bar</button>
