--- a/steel-bars-calculator/index.html
+++ b/steel-bars-calculator/index.html
@@ -78,7 +78,7 @@
       <main>
         
         <section class="container">
-            <nav class="button-group" aria-label="Material Type Selection">
+            <div class="button-group" aria-label="Material Type Selection">
                 <button class="tab-btn active" data-type="plain" aria-label="Plain Bar Calculator">Plain Bar</button>
                 <button class="tab-btn" data-type="tmt" aria-label="Deformed TMT Bar Calculator">Deformed TMT Bar</button>
                 <button class="tab-btn" data-type="square" aria-label="Square Bar Calculator">Square Bar</button>
@@ -90,7 +90,7 @@
                 <button class="tab-btn" data-type="iron-rect-pipe" aria-label="Iron Rectangular Pipe Calculator">Iron Rect Pipe</button>
                 <button class="tab-btn" data-type="gi-round-pipe" aria-label="GI Round Pipe Calculator">GI Round Pipe</button>
                 <button class="tab-btn" data-type="iron-round-pipe" aria-label="Iron Round Pipe Calculator">Iron Round Pipe</button>
-            </nav>
+            </div>
 
             <div id="calculator" class="calc-container">
                 <!-- Plain Bar -->
