--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <meta name="twitter:description" content="Explore useful tools like Nepali land area converter, detail calculations of asphalt works, steel and GI, and contact for all land and malpot related works.">
     <meta name="twitter:image" content="assets/images/homepage.png">
 
+<link rel="canonical" href="https://krishnaniraula.com.np/" />
+
     <title>Welcome to Krishna's Website</title>
     
     <link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png"/>
