--- a/asphalt-calculator/index.html
+++ b/asphalt-calculator/index.html
@@ -147,7 +147,7 @@
       })
       .catch(error => console.error("Error loading script:", error));
   </script>
-    <script src="scripts.js"></script>
+    <script src="script.js"></script>
 
 </body>
 </html>
