--- a/asphalt-calculator/bm.html
+++ b/asphalt-calculator/bm.html
@@ -344,7 +344,7 @@
     <p>Bituminous Macadam shall be paid as per contract unit rate which shall be the full and final compensation for the cost of compliance of all rrequirements of Clauses 1301 and 1307 in addition to those specified in Clause 112</p>
 
     <footer>
-        <p>Specification document for Bituminous Macadam construction</p>
+        <p>Source: DoR STANDARD SPECIFICATIONS FOR ROAD AND BRIDGE WORKS 2073 With amendment 2075</p>
     </footer>
 </body>
 </html>
