--- a/asphalt-calculator/bc.html
+++ b/asphalt-calculator/bc.html
@@ -440,7 +440,7 @@
     <p>Asphalt concrete/ Bituminous concrete shall be paid as per contract unit rate which shall be the full and final compensation for the cost of compliance of all requirements of Clauses 1301 and 1309 in addition to those specified in Clause 112.</p>
 
     <footer>
-        <p>Source: DoR STANDARD SPECIFICATIONS FOR ROAD AND BRIDGE WORKS 2073 With amendment 2075</p>
+        <p>Source: DOR STANDARD SPECIFICATIONS FOR ROAD AND BRIDGE WORKS 2073 WITH AMENDMENT 2075</p>
     </footer>
 </body>
 </html>
