--- a/asphalt-calculator/dbm.html
+++ b/asphalt-calculator/dbm.html
@@ -611,7 +611,7 @@
     <p>Dense Graded Bituminous Macadam shall be paid as per contract unit rate which shall be the full and final compensation for the cost of compliance of all requirements of Clauses 1301 and 1308 in addition to those specified in Clause 112.</p>
 
     <footer>
-        <p>Specification document for Dense Bituminous Macadam construction</p>
+        <p>Source: DOR STANDARD SPECIFICATIONS FOR ROAD AND BRIDGE WORKS 2073 WITH AMENDMENT 2075</p>
     </footer>
 </body>
 </html>
