--- a/asphalt-calculator/pmc.html
+++ b/asphalt-calculator/pmc.html
@@ -45,6 +45,13 @@
             font-weight: bold;
             margin-bottom: 10px;
         }
+           footer {
+            margin-top: 40px;
+            padding-top: 20px;
+            border-top: 1px solid #ddd;
+            font-size: 0.9em;
+            color: #777;
+        }
     </style>
 </head>
 <body>
