--- a/asphalt-calculator/index.html
+++ b/asphalt-calculator/index.html
@@ -30,7 +30,7 @@
         "@context": "https://schema.org",
         "@type": "WebApplication",
         "name": "Advanced Bituminous Works Calculator",
-        "description": "A calculator for determining total material quantities quantities, costs and production cost for all types of bituminous concrete works per Nepal DoR Standards.",
+        "description": "A calculator for determining total material quantities quantities, costs and production cost for all types of bituminous concrete works (asphalt) per Nepal DoR Standards.",
         "url": "https://krishnaniraula.com.np/asphalt-calculator/",
         "applicationCategory": "Construction",
         "operatingSystem": "Web",
