--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <ul id="menu">
             <li><a href="#tools" class="no-deco">Tools</a></li>
 		<li><a href="#portfolio" class="no-deco">Apps</a></li>
-		<li><a href="#about-work" class="no-deco">घर जग्गा</a></li>
+		<li><a href="gharjagga/" class="no-deco" target="blank">घर जग्गा</a></li>
             <li><a href="#contact" class="no-deco">Contact</a></li>
             <li><a href="#contact" class="no-deco">About</a></li>
         </ul>
@@ -215,60 +215,7 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
     </div>
 </section>
 
- <section id="about-work" class="about-work">
-    <h2>घर तथा जग्गा</h2>
-    <div class="about-work-content">
-        <div class="about-upper container">
-            <div class="about-upper-left">
-                <img src="assets/images/passport-photo.jpg" alt="Bhisma Niraula Passport Photo" class="passport-photo">
-            </div>
-            <div class="about-upper-right">
-                <h3>भिष्म निरौला</h3>
-                <p>नमस्ते । <strong>भक्तपुर जिल्ला भित्र जग्गाको नाप जाँच, पास, लगायत जग्गा सम्बन्धी सम्पूर्ण कामहरूको लागि</strong>, साथै जुनसुकै स्थानमा जग्गा खरिद बिक्री, <strong>घरको नक्सा 2D, 3D, इन्टेरियर, एक्स्टेरियर डिजाइन</strong> लगायतका कामहरू छिटो-छरितो र बिना झन्झट, सहज ढंगबाट गर्नको लागि सम्पर्क गर्नुहोला।</p>
-                <p><strong>Phone: </strong>Whatsapp Instead</p>
-                <p><strong>Email:</strong> <a href="mailto:niraulabhisma@gmail.com" class="no-deco">Email Bhisma</a></p>
-                <p><strong>WhatsApp:</strong> <a href="https://wa.me/9841915278" class="no-deco" target="_blank">Whatsapp Bhisma</a></p>
-            </div>
-        </div>
 
-        <div class="work-gallery container">
-            <h2>My Work</h2>
-            <div class="gallery-wrapper">
-                <div class="gallery-item">
-                    <img src="assets/images/bhismawork1.jpg" alt="Work Photo 1">
-                    <p>मेसिनबाट जग्गाको क्षेत्रफल नाप्दै</p>
-                </div>
-                <div class="gallery-item">
-                    <video controls>
-                        <source src="assets/videos/work2.mp4" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video>
-                    <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                </div>
-                <div class="gallery-item">
-                    <img src="assets/images/bhismawork3.jpg" alt="Work Photo 3">
-                    <p>लोकप्रिय पप गायक नविन के. भट्टराईसँग आफ्नै अफिसमा</p>
-                </div>
-                <div class="gallery-item">
-                    <img src="assets/images/work4.jpg" alt="Work Photo 4">
-                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
-                </div>
-                <div class="gallery-item">
-                    <video controls>
-                        <source src="assets/videos/work5.mp4" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video>
-                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
-                </div>
-                <div class="gallery-item">
-                    <img src="assets/images/work6.jpg" alt="Work Photo 6">
-                    <p>Qui officia deserunt mollit anim id est laborum.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-	  
 </main>
   <footer>
    <div class="footer-container">
