--- a/asphalt-calculator/index.html
+++ b/asphalt-calculator/index.html
@@ -63,7 +63,7 @@
         <button id="btn-BC-19mm" onclick="selectType('BC-19mm'); handleBituminousSelection('BC-19mm')">BC 19mm</button>
         <button id="btn-PMC-Close" onclick="selectType('PMC-Close'); handleBituminousSelection('PMC-Close')">PMC Close</button>
         <button id="btn-PMC-Open" onclick="selectType('PMC-Open'); handleBituminousSelection('PMC-Open')">PMC Open</button>
-        <button id="btn-SandSeal" onclick="selectType('SandSeal'); handleBituminousSelection('SandSeal')">Sand Asphalt</button>
+        <button id="btn-SandAsphalt" onclick="selectType('SandAsphalt'); handleBituminousSelection('SandAsphalt')">Sand Asphalt</button>
     </div>
 
     <div id="input-form" class="hidden">
