--- a/asphalt-calculator/dbm.html
+++ b/asphalt-calculator/dbm.html
@@ -390,16 +390,14 @@
         <caption>Table 13.29: Requirements for Dense Graded Bituminous Macadam</caption>
         <thead>
             <tr>
-                <th>Properties</th>
-                <th>Viscosity Grade Paving Bitumen</th>
-                <th>Modified bitumen</th>
-                <th>Test Method</th>
+                <th rowspan="2">Properties</th>
+                <th rowspan="2">Viscosity Grade Paving Bitumen</th>
+                <th colspan="2">Modified bitumen</th>
+                <th rowspan="2">Test Method</th>
             </tr>
             <tr>
-                <th></th>
                 <th>Hot climate</th>
                 <th>Cold climate</th>
-                <th></th>
             </tr>
         </thead>
         <tbody>
