--- a/asphalt-calculator/dbm.html
+++ b/asphalt-calculator/dbm.html
@@ -464,7 +464,7 @@
         <thead>
             <tr>
                 <th>Nominal Maximum Particle Size (mm)</th>
-                <th>Minimum VMA Percent Related to Design Percentage Air voids</th>
+                <th colspan="3">Minimum VMA Percent Related to Design Percentage Air voids</th>
             </tr>
             <tr>
                 <th></th>
