--- a/asphalt-calculator/dbm.html
+++ b/asphalt-calculator/dbm.html
@@ -402,10 +402,8 @@
         </thead>
         <tbody>
             <tr>
-                <td>Properties 75 blows on each face of the specimen</td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>Properties</td>
+                <td colspan="4">75 blows on each face of the specimen</td>
             </tr>
             <tr>
                 <td>Minimum stability (kN at 60°C)</td>
