--- a/asphalt-calculator/index.html
+++ b/asphalt-calculator/index.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Bituminous Calculator for Nepal DoR Standards | Cost Estimator">
     <meta property="og:description" content="Calculate materials for bituminous works based on Nepal DoR Standards (2073).">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://krishnaniraula.com.np/asphalt-calculator/">
+    <meta property="og:url" content="https://krishnaniraula.com.np/asphalt-calculator">
     <meta property="og:image" content="https://krishnaniraula.com.np/assets/images/asphaltpage.png">
     <meta property="og:image:alt" content="Screenshot of Bituminous Calculator Interface">
 <meta name="twitter:image:alt" content="Visual demonstration of Nepal DoR asphalt calculation tool">
@@ -80,7 +80,7 @@
 <main>
       <div class="container">
            <h1>Advanced Bituminous Works Calculator</h1>
-          <h2>Estimate Materials, Quantities & Costs, A Complete Calculation for Contractors and Engineers</h2>
+          <h2 class="visually-hidden">Estimate Materials, Quantities & Costs, A Complete Calculation for Contractors and Engineers</h2>
         
          <p>Find the required materials, calculate their quantities and costs, determine the total production cost, <strong>compare material costs from different crushers</strong>, and perform all necessary calculations for bituminous concrete works based on Nepal DoR Standards (2073).</p>
 
