--- a/asphalt-calculator/index.html
+++ b/asphalt-calculator/index.html
@@ -4,71 +4,76 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
     <meta name="description" content="Estimate materials, quantity, and costs for Bituminous Macadam (BM), Dense (DBM), BC, Open and Close Graded Premix per Nepal DoR Standards (2073).">
-    <meta name="keywords" content="bituminous works calculator, Nepal DoR, asphalt concrete, premix carpet, sand seal,DBM,Dense Bituminous Macadam, Bituminous Macadam, road construction materials, quantity finder, cost estimate">
+    <meta name="keywords" content="bituminous works calculator, Nepal DoR, asphalt concrete, premix carpet, sand seal, DBM, Dense Bituminous Macadam, Bituminous Macadam, road construction materials, quantity finder, cost estimate">
     <meta name="author" content="Krishna Niraula">
     <meta name="robots" content="index, follow">
     <title>Bituminous Calculator for Nepal DoR Standards | Cost Estimator</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="sitemap" type="application/xml" href="/sitemap.xml">
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" as="style" onload="this.rel='stylesheet'">
-<noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"></noscript>
-    
-   <link rel="canonical" href="https://krishnaniraula.com.np/asphalt-calculator/" />
-   <link rel="shortcut icon" href="/assets/logo/favicon.png" type="image/png" />
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" as="style" onload="this.rel='stylesheet'" crossorigin="anonymous">
+    <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"></noscript>
+    <link rel="canonical" href="https://krishnaniraula.com.np/asphalt-calculator/">
+    <link rel="shortcut icon" href="/assets/logo/favicon.png" type="image/png">
     <meta property="og:title" content="Bituminous Calculator for Nepal DoR Standards | Cost Estimator">
     <meta property="og:description" content="Calculate materials for bituminous works based on Nepal DoR Standards (2073).">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://krishnaniraula.com.np/asphalt-calculator">
+    <meta property="og:url" content="https://krishnaniraula.com.np/asphalt-calculator/">
     <meta property="og:image" content="https://krishnaniraula.com.np/assets/images/asphaltpage.png">
     <meta property="og:image:alt" content="Screenshot of Bituminous Calculator Interface">
-<meta name="twitter:image:alt" content="Visual demonstration of Nepal DoR asphalt calculation tool">
+    <meta name="twitter:image:alt" content="Visual demonstration of Nepal DoR asphalt calculation tool">
     <meta property="og:image:width" content="1200">
-<meta property="og:image:height" content="630">
-    
+    <meta property="og:image:height" content="630">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@0kisn">
     <meta name="twitter:title" content="Bituminous Calculator for Nepal DoR Standards | Cost Estimator">
     <meta name="twitter:description" content="Calculate materials quantity and costs, total production costs, everything for bituminous works based on Nepal DoR Standards (2073).">
     <meta name="twitter:image" content="https://krishnaniraula.com.np/assets/images/asphaltpage.png">
-
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7909865065068819"
-     crossorigin="anonymous"></script>
-   <script type="application/ld+json">
-{
-    "@context": "https://schema.org",
-    "@type": "WebApplication",
-    "name": "Bituminous Calculator for Nepal DoR Standards",
-    "description": "Professional-grade calculator for asphalt material quantities and cost estimation aligned with Nepal DoR Standards (2073).",
-    "url": "https://krishnaniraula.com.np/asphalt-calculator/",
-    "applicationCategory": ["ConstructionApplication", "Calculator"],
-    "operatingSystem": "Any",
-    "inLanguage": "en",
-    "featureList": [
-        "Bituminous Macadam (BM) calculations",
-        "Dense Bituminous Macadam (DBM) calculations",
-        "Bituminous Concrete (BC) calculations",
-        "Bituminous Premix Carpet (PMC) calculations",
-        "Material cost comparison across crushers",
-        "Compliance with Nepal DoR Standards (2073)"
-    ],
-    "image": "https://krishnaniraula.com.np/assets/images/asphaltpage.png",
-    "screenshot": "https://krishnaniraula.com.np/assets/images/asphaltpage.png",
-    "datePublished": "2025-03-29",
-    "dateModified": "2025-04-06",
-    "offers": {
-        "@type": "Offer",
-        "price": "0",
-        "priceCurrency": "USD",
-        "availability": "https://schema.org/InStock"
-    },
-    "author": {
-        "@type": "Person",
-        "name": "Krishna Niraula",
-        "url": "https://krishnaniraula.com.np",
-        "sameAs": ["https://twitter.com/0kisn"]
+    <script>
+        (function() {
+            const currentPath = window.location.pathname;
+            if (currentPath.endsWith("index.html")) {
+                const newPath = currentPath.replace(/index\.html$/, "") + window.location.search + window.location.hash;
+                window.location.replace(window.location.protocol + "//" + window.location.host + newPath);
+            }
+        })();
+    </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7909865065068819" crossorigin="anonymous"></script>
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "Bituminous Calculator for Nepal DoR Standards",
+        "description": "Professional-grade calculator for asphalt material quantities and cost estimation aligned with Nepal DoR Standards (2073).",
+        "url": "https://krishnaniraula.com.np/asphalt-calculator/",
+        "applicationCategory": ["ConstructionApplication", "Calculator"],
+        "operatingSystem": "Any",
+        "inLanguage": "en",
+        "featureList": [
+            "Bituminous Macadam (BM) calculations",
+            "Dense Bituminous Macadam (DBM) calculations",
+            "Bituminous Concrete (BC) calculations",
+            "Bituminous Premix Carpet (PMC) calculations",
+            "Material cost comparison across crushers",
+            "Compliance with Nepal DoR Standards (2073)"
+        ],
+        "image": "https://krishnaniraula.com.np/assets/images/asphaltpage.png",
+        "screenshot": "https://krishnaniraula.com.np/assets/images/asphaltpage.png",
+        "datePublished": "2025-03-29",
+        "dateModified": "2025-04-06",
+        "offers": {
+            "@type": "Offer",
+            "price": "0",
+            "priceCurrency": "USD",
+            "availability": "https://schema.org/InStock"
+        },
+        "author": {
+            "@type": "Person",
+            "name": "Krishna Niraula",
+            "url": "https://krishnaniraula.com.np",
+            "sameAs": ["https://twitter.com/0kisn"]
+        }
     }
-}
-</script>
+    </script>
 </head>
 <body>
    
