--- a/gharjagga/index.html
+++ b/gharjagga/index.html
@@ -9,18 +9,18 @@
     <meta name="robots" content="index, follow">
     <title>भिष्म निरौला - जग्गा नापी, घर डिजाइन र भूमि विकास सेवा | भक्तपुर</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="canonical" href="https://yourwebsite.com/" />
+    <link rel="canonical" href="https://krishnaniraula.com.np/" />
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
     <meta property="og:title" content="भिष्म निरौला - जग्गा नापी, घर डिजाइन र भूमि विकास सेवा">
     <meta property="og:description" content="भक्तपुरमा जग्गा नापी, घर डिजाइन र खरिद बिक्रीका लागि भिष्म निरौलाको विश्वसनीय सेवा। सम्पर्क: 9841915278">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://yourwebsite.com/">
-    <meta property="og:image" content="https://yourwebsite.com/assets/images/passport-photo.jpg">
+    <meta property="og:url" content="https://krishnaniraula.com.np/">
+    <meta property="og:image" content="https://krishnaniraula.com.np/assets/images/passport-photo.jpg">
     <meta property="og:image:alt" content="भिष्म निरौलाको फोटो">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="भिष्म निरौला - जग्गा नापी र घर डिजाइन सेवा">
     <meta name="twitter:description" content="भक्तपुरमा जग्गा नापी, घर डिजाइन र खरिद बिक्रीका लागि सम्पर्क गर्नुहोस्: 9841915278">
-    <meta name="twitter:image" content="https://yourwebsite.com/assets/images/passport-photo.jpg">
+    <meta name="twitter:image" content="https://krishnaniraula.com.np/assets/images/passport-photo.jpg">
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
@@ -34,7 +34,7 @@
             "addressLocality": "भक्तपुर",
             "addressCountry": "NP"
         },
-        "image": "https://yourwebsite.com/assets/images/passport-photo.jpg",
+        "image": "https://krishnaniraula.com.np/assets/images/passport-photo.jpg",
         "url": "https://yourwebsite.com/",
         "contactPoint": {
             "@type": "ContactPoint",
