--- a/gharjagga/index.html
+++ b/gharjagga/index.html
@@ -9,12 +9,12 @@
     <meta name="robots" content="index, follow">
     <title>भिष्म निरौला - जग्गा नापी, घर डिजाइन र भूमि विकास सेवा | भक्तपुर</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="canonical" href="https://krishnaniraula.com.np/" />
+    <link rel="canonical" href="https://krishnaniraula.com.np/gharjagga/">
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
     <meta property="og:title" content="भिष्म निरौला - जग्गा नापी, घर डिजाइन र भूमि विकास सेवा">
     <meta property="og:description" content="भक्तपुरमा जग्गा नापी, घर डिजाइन र खरिद बिक्रीका लागि भिष्म निरौलाको विश्वसनीय सेवा। सम्पर्क: 9841915278">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://krishnaniraula.com.np/">
+    <meta property="og:url" content="https://krishnaniraula.com.np/gharjagga/">
     <meta property="og:image" content="https://krishnaniraula.com.np/assets/images/passport-photo.jpg">
     <meta property="og:image:alt" content="भिष्म निरौलाको फोटो">
     <meta name="twitter:card" content="summary_large_image">
