--- a/steel-bars-calculator/index.html
+++ b/steel-bars-calculator/index.html
@@ -881,8 +881,12 @@
             <li>Suitable for heavy-duty applications</li>
         </ul>
     </div>
-</section>
+    </section>
+
+            </div>
+        </section>
     </main>
+                
 <script>
     fetch("https://steel.niraula300.workers.dev/")
       .then(response => {
