--- a/steel-bars-calculator/index.html
+++ b/steel-bars-calculator/index.html
@@ -34,7 +34,7 @@
     <link rel="shortcut icon" type="image/png" href="https://krishnaniraula.com.np/assets/logo/favicon.png">
     
    
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/steel-bars-calculator/style.css">
     
    
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7909865065068819" crossorigin="anonymous"></script>
