--- a/steel-bars-calculator/index.html
+++ b/steel-bars-calculator/index.html
@@ -121,7 +121,7 @@
                             <input type="number" id="plain-density" placeholder="7850 (default steel density)">
                             <span class="unit">kg/m³</span>
                         </div>
-                        <button type="button" class="calculate-btn">Calculate Steel Bar Values</button>
+                        <button type="button" class="calculate-btn" aria-label="Calculate Plain Bar Values">Calculate</button>
                     </form>
                 </section>
 
