--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <img src="assets/images/welcome-banner.jpeg" alt="Main Photo">
             </div>
             <div class="intro-text">
-                <h1>Welcome to Krishna's Website</h1>
+                <h1>Welcome &mdash; glad you're here!</h1>
                 <p>Working in Construction industry since 2009, from surveyor - supervisor to Project Manager. Here you can explore various tools, including <strong><a href="asphalt-calculator" class="no-deco">Advanced Bitumenous work estimator</a>, land area converters</strong>, and much more. Try my app from the link given below. Discover various resources to simplify construction, engineering, and all works related to land and land revenue office too. <strong>Contact for more.</strong></p>
              </div>
         </div>
