--- a/index.html
+++ b/index.html
@@ -134,85 +134,73 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
     </div>
 </section>
 	  
-  
+  <section class="skills-section">
+  <div class="skills-title">Skills</div>
 
-<section id="skills" class="skills">
-    <div class="skill-content">
-        <div class="section-heading text-center">
-            <h2>Skills</h2>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="skill-item">
-                        <span class="progressText">Construction Management</span>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="10" aria-valuemax="100"></div>
-                        </div>
-                        <h3>70%</h3>
-                    </div>
-                    <div class="skill-item">
-                        <span class="progressText">Field Work</span>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="10" aria-valuemax="100"></div>
-                        </div>
-                        <h3>85%</h3>
-                    </div>
-                    <div class="skill-item">
-                        <span class="progressText">Documentation</span>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="10" aria-valuemax="100"></div>
-                        </div>
-                        <h3>65%</h3>
-                    </div>
-                    <div class="skill-item">
-                        <span class="progressText">Sketchup & 3D Rendering</span>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="10" aria-valuemax="100"></div>
-                        </div>
-                        <h3>60%</h3>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="skill-item">
-                        <span class="progressText">Microsoft Office</span>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="10" aria-valuemax="100"></div>
-                        </div>
-                        <h3>65%</h3>
-                    </div>
-                    <div class="skill-item">
-                        <span class="progressText">CAD Drawing</span>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="35" aria-valuemin="10" aria-valuemax="100"></div>
-                        </div>
-                        <h3>35%</h3>
-                    </div>
-                    <div class="skill-item">
-                        <span class="progressText">Communication</span>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="10" aria-valuemax="100"></div>
-                        </div>
-                        <h3>70%</h3>
-                    </div>
-                    <div class="skill-item">
-                        <span class="progressText">Creativity</span>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="10" aria-valuemax="100"></div>
-                        </div>
-                        <h3>60%</h3>
-                    </div>
-                    <div class="skill-item">
-                        <span class="progressText">App Development</span>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="10" aria-valuemax="100"></div>
-                        </div>
-                        <h3>20%</h3>
-                    </div>
-                </div>
-            </div>
-        </div>
+  <div class="skill">
+    <label>Construction Management</label>
+    <div class="progress-bar">
+      <div class="progress-fill fill-70"></div>
     </div>
+  </div>
+
+  <div class="skill">
+    <label>Field Work</label>
+    <div class="progress-bar">
+      <div class="progress-fill fill-85"></div>
+    </div>
+  </div>
+
+  <div class="skill">
+    <label>Documentation</label>
+    <div class="progress-bar">
+      <div class="progress-fill fill-65"></div>
+    </div>
+  </div>
+
+<div class="skill">
+    <label>Sketchup & 3D Rendering</label>
+    <div class="progress-bar">
+      <div class="progress-fill fill-60"></div>
+    </div>
+  </div>
+
+<div class="skill">
+    <label>Microsoft Office</label>
+    <div class="progress-bar">
+      <div class="progress-fill fill-65"></div>
+    </div>
+  </div>
+
+<div class="skill">
+    <label>CAD Drawing</label>
+    <div class="progress-bar">
+      <div class="progress-fill fill-30"></div>
+    </div>
+  </div>
+
+
+<div class="skill">
+    <label>Communication</label>
+    <div class="progress-bar">
+      <div class="progress-fill fill-70"></div>
+    </div>
+  </div>
+
+<div class="skill">
+    <label>Creativity</label>
+    <div class="progress-bar">
+      <div class="progress-fill fill-60"></div>
+    </div>
+  </div>
+
+<div class="skill">
+    <label>App Development</label>
+    <div class="progress-bar">
+      <div class="progress-fill fill-20"></div>
+    </div>
+  </div>
+
 </section>
 
 
